--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ rel="stylesheet"
 
 <link rel="stylesheet" href="/assets/js/index.js">
  <!-- HOVER LINK -->
-<link rel="styleshee" href="/Hover-master/css/hover.css" media="all">
+<link rel="stylesheet" href="/Hover-master/css/hover.css" media="all">
 <link rel="stylesheet" href="/Hover-master/css/hover-min.css">
 <link rel="stylesheet" href="/assets/css/index.css">
 
